# clique-fusion

./: .release-plz.toml  CHANGELOG.md  COMM-LICENSE  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  publish-artefacts.yml
benches/: gen_data.rs  processing.rs
csharp/: .gitignore  CONTRIBUTING.md  CliqueFusion.buildonly.slnf  CliqueFusion.sln  Directory.Build.props  Directory.Build.targets.backup  all.txt  stylecop.json
csharp/src/CliqueFusion/: CliqueFusion.csproj  README.md  build-native.sh
csharp/src/CliqueFusion.SmokeTest/: CliqueFusion.SmokeTest.csproj  Program.cs
csharp/src/CliqueFusion.Tests/: CliqueFusion.Tests.csproj  CliqueIndexNativeTests.cs  CliqueIndexTests.cs
csharp/src/CliqueFusion/Native/: CliqueIndexNative.cs
csharp/src/CliqueFusion/Properties/: AssemblyInfo.cs
csharp/src/CliqueFusion/Wrappers/: Clique.cs  CliqueIndex.cs  CliqueThresholds.cs  Observation.cs
ffi/: Cargo.toml  README.md
ffi/src/: lib.rs
ffi/tests/: ffi.rs
src/: clique_index.rs  cliques.rs  lib.rs  observation.rs  spatial_index.rs
src/observation/: covariance_matrix.rs
