[workspace]
members = ["ffi"]

[workspace.package]
edition = "2024"
license-file = "LICENSING.md"
keywords = ["spatial-index", "geo", "coordinates", "fusion", "robotics"]
categories = ["science::geo", "science::robotics"]
rust-version = "1.85.1"
repository = "https://github.com/danieleades/clique-fusion"

[package]
name = "clique-fusion"
description = "a library for 'spatial fusion' of separate observations of objects"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
nalgebra = "0.33.2"
rstar = "0.12.2"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.17.0", features = ["serde"] }

[[bench]]
name = "processing"
harness = false

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"

[lints.clippy]
all ="deny"
pedantic = "warn"
nursery = "warn"
cargo = "deny"
